[gd_scene load_steps=3 format=3 uid="uid://rhjo1uacvu7t"]

[ext_resource type="Theme" uid="uid://3kxe3erbqcxp" path="res://scenes_scenes/theme_menu.tres" id="1_5bpgi"]
[ext_resource type="Script" path="res://script_scenes/GameMenu.gd" id="2_37j03"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5bpgi")
script = ExtResource("2_37j03")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0.270588, 0.207843, 0.639216)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -88.0
offset_right = 158.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu principal"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Salir"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
